# ChangeLog for media-video/mplayer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.725 2010/04/24 12:44:45 aballier Exp $

  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  allow ass and truetype without X, by Andrew Savchenko, bug #299405

  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  use system libass, require freetype 2.2.1 at least

  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  fix opencore-amr automagic dep

  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  Fix codecsdir handling; default to real ones, the default can be overriden
  with codecpath=somewhere in cli or config file, bug #310389 and bug
  #309931

  23 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  mplayer-1.0_rc4_p20091026-r1.ebuild, mplayer-1.0_rc4_p20100213-r1.ebuild,
  mplayer-9999.ebuild, metadata.xml:
  Rename USE opencore-amr to amr.

  07 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  mplayer-1.0_rc4_p20091026-r1.ebuild, mplayer-1.0_rc4_p20100213-r1.ebuild,
  mplayer-9999.ebuild:
  Drop unrar-gpl dep. Since it is useless.

  26 Mar 2010; Dror Levin <spatz@gentoo.org>
  mplayer-1.0_rc4_p20091026-r1.ebuild, mplayer-1.0_rc4_p20100213-r1.ebuild,
  mplayer-9999.ebuild:
  Convert font deps to virtual/ttf-fonts wrt bug 282754.

  26 Mar 2010; Dror Levin <spatz@gentoo.org> mplayer-9999.ebuild:
  Remove dvbhead configure argument, bug 307951.

  15 Mar 2010; Fabio Erculiani <lxnay@gentoo.org>
  mplayer-1.0_rc4_p20100213-r1.ebuild, mplayer-9999.ebuild:
  fine tune USE="vdpau" dependencies

  15 Mar 2010; Fabio Erculiani <lxnay@gentoo.org>
  mplayer-1.0_rc4_p20100213-r1.ebuild, mplayer-9999.ebuild:
  there is no need to depend against x11-drivers/nvidia-drivers for
  USE="vdpau", x11-libs/libvdpau is enough

  09 Mar 2010; Steve Dibb <beandog@gentoo.org> mplayer-9999.ebuild: