@@ -15,13 +15,13 @@ DIST mplayer-1.0_rc4_p20100213.tbz2 8811960 RMD160 b6991ef2dde9497bcffa32687f484
 DIST svgalib_helper-1.9.17-mplayer.tar.gz 7583 RMD160 927ff34f187e4fa9528e2e48208173d98b3d1d1b SHA1 bf789706d1d79c695f781644c7ea6d57c3eed4c3 SHA256 a6f803f3df4cd4544751d3a3ee936a8bf0e20e32a452639b3f7c7d9e73e65938
 EBUILD mplayer-1.0_rc4_p20091026-r1.ebuild 18927 RMD160 c7309c7c6ede6bac97c11cad1cc7b0e22aefbd51 SHA1 c86f4c9aaa6988514567767bc956e13990604bce SHA256 33f3781cb30c8fa255720858dca723597a4e58aef5fa2ab61c22dcc295b9b070
 EBUILD mplayer-1.0_rc4_p20100213-r1.ebuild 19858 RMD160 5f77503100806ab35de8133fa488d965438b73f6 SHA1 2d24955936312f05e7c21e0121ca0140d2fc2f0e SHA256 1655621f8bd99ed913f5e3b3104645c2c4fb6644a0de4dcc26b28c71ef1b5fd8
-EBUILD mplayer-9999.ebuild 19848 RMD160 3f7a5d50cecc20bb5e183762b2fafbbfc2a42840 SHA1 1cc69e0f894912d091fc291d24c173f08a66956c SHA256 1eab39cafd64ec8409019832c69b77778070f262d360a2c29e0c186223956595
-MISC ChangeLog 128124 RMD160 8bdebd1e24c0729fb809d0c326f20df7dc834a0d SHA1 afe74d8b482e4bd922a589e84a6898e4b020c0a6 SHA256 8a66b7860cba1da932b6fa21817d163dc3b0bf3ee6693979ed956e62ee716209
+EBUILD mplayer-9999.ebuild 19974 RMD160 72d0c883fe2264a58e0537f25324913fb538b4db SHA1 c91d13617a59d7ef27b6b056909058b329b4d1f1 SHA256 00aa1d5a24a39e5c743a2efcef88eadb439cb39c412e8c200ed8305d6756350f
+MISC ChangeLog 128323 RMD160 80a4fcd0f83356cce2414ad0909ca04306959028 SHA1 2859a464fd484447c4d298d67f564280e16f84e5 SHA256 42c1cf92dedf7de450614b968a018aee910df89aaabcf75b2f09ed8be2619015
 MISC metadata.xml 3586 RMD160 b9cb0e6ff486e5d3cc87e4d23bf0facb1bfa9b5b SHA1 9e082b1c3ff16683a7f7a3b0fd57eaad70673f24 SHA256 5a31e1c7c36addd4653af26afeacdf5cf527c03c55b1636fe0d9aad19215766e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvS6GYACgkQvFcC4BYPU0pJOwCfbjqvMoRSaU6HzMAsmV87Y/zW
-SmkAoMCOVRC4qGtFpr9+Fw+s1LtrlYN9
-=lGMQ
+iEYEARECAAYFAkvS7DMACgkQvFcC4BYPU0rPtgCgm2zlX7Xqe6m/aJjSeFFcGU50
+HKkAn0axHnY+1v/59n51Mt1Gs7LiQ8BM
+=kYC4
 -----END PGP SIGNATURE-----
